# hippius-hub

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.receiver  LICENSE-MIT  README.md  deny.toml  llms.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bench-10gb.yml  benchmark.yml  e2e.yml  health-image.yml  release.yml
bench/: bench_10gb.py
benches/: hashing.rs
deploy/: Dockerfile
deploy/k8s/: health-monitor.yaml
deploy/receiver/: README.md  deployment.yaml  kustomization.yaml  networkpolicy.yaml  pdb.yaml  service.yaml
docs/: diagnosing-speed.md
docs/audit/: clippy-baseline-2026-05-26.txt
docs/plans/: 2026-05-26-audit-remediation.md  2026-07-09-chunked-artifact-layout.md  2026-07-09-parallel-blob-upload.md  2026-07-10-chunked-v2-pack-layout.md  2026-07-11-connection-audit-remediation.md
hippius_hub/: __init__.py  _dedup_index.py  _harbor.py  _http.py  _logging.py  _oci.py  _packing.py  _repo_ops.py  _snapshot_download.py  _token.py  _update_check.py  auth.py  cli.py  console.py  constants.py  diagnose.py  errors.py  file_download.py  file_upload.py  health_monitor.py  hf_api.py
receiver/: Cargo.toml
receiver/src/: e2e_tests.rs  error.rs  flow_tests.rs  handlers.rs  harbor.rs  main.rs  plan.rs  state.rs
scripts/: README.md  bench.py  bench_chunked_transfer.py  gen_key_chunk_vectors.py  requirements.txt
scripts/phase0/: chunk_size_measure.py
src/: chunk_fetcher.rs  chunked_downloader.rs  diagnostics.rs  error.rs  lib.rs  multipart_uploader.rs  retry.rs  uploader.rs
tests/: _helpers.py  conftest.py  respx_fixtures.py  test_anonymous_download.py  test_artifact_delete.py  test_auth_cache_key.py  test_auth_failures.py  test_auth_timeout.py  test_auth_token_atomic.py  test_auth_token_false.py  test_auth_token_perms.py  test_blob_unknown_selfheal.py  test_chunk_upload_native.py  test_chunked_config.py  test_chunked_download_abort.py  test_chunked_download_native.py  test_chunked_download_partial_content.py  test_chunked_download_routing.py  test_chunked_upload.py  test_chunked_v2_upload.py  test_cli.py  test_cli_error_routing.py  test_cli_exit_codes_e2e.py  test_cli_help_contract.py  test_cli_login_no_strip.py  test_cli_models_null_format.py  test_cli_registry_exit_codes.py  test_cli_registry_readonly.py  test_cli_repos_delete.py  test_concurrent_upload.py  test_config_blob_cache.py  test_console_api.py  test_console_models_filters.py  test_console_readonly.py  test_control_plane_retry.py  test_create_symlink_atomic.py  test_create_symlink_warns.py  test_dedup_index_client.py  test_diagnose.py  test_diagnose_upload.py  (+54 more)
tests/fixtures/: key_chunk_vectors.json
tests/unit/: test_commit_info_parity.py  test_get_docker_auth.py  test_get_oci_bearer_token.py  test_jwt_expiration.py  test_merge_layers.py  test_repo_id_validation.py  test_repo_url_parity.py  test_resolve_token_value.py
