[package]
name = "hippius_core"
version = "0.4.7"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "hippius_core"
# rlib makes the crate consumable by Rust's own test harness (`cargo test`).
# cdylib is the Python-extension target.
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3", "abi3-py38"] }
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros", "fs", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
indicatif = "0.17.8"
futures = "0.3"
hex = "0.4"
thiserror = "1.0"

[target.'cfg(all(target_arch = "x86_64", target_os = "linux"))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[target.'cfg(not(all(target_arch = "x86_64", target_os = "linux")))'.dependencies]
sha2 = "0.10"

[dev-dependencies]
proptest = "1.5"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Panic prevention
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
# No cheating
allow_attributes = "deny"
# Code hygiene
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Safety
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
# Pedantic relaxations (too noisy)
module_name_repetitions = "allow"
similar_names = "allow"
