[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "hippius_hub"
version = "0.2.2"
description = "Drop-in replacement for huggingface_hub using a Rust backend for ultra-fast downloads"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "typing_extensions",
    "tqdm"
]

[project.optional-dependencies]
test = ["pytest>=7", "huggingface_hub>=0.20"]

[project.scripts]
hippius-hub = "hippius_hub.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hippius_hub.hippius_core"
python-source = "."

[tool.pytest.ini_options]
addopts = "-m 'not e2e and not hf_parity'"
markers = [
    "e2e: tests that talk to registry.hippius.com (require HIPPIUS_TEST_USER/PASS)",
    "hf_parity: tests that also hit huggingface.co (require network to HF)",
    "slow: tests that move large amounts of data (excluded from PR runs)",
]

