[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "hippius_hub"
version = "0.4.7"
description = "Hippius Hub CLI + Python client: manage your registry namespace, search the AI model index, and pull/push models with a Rust-accelerated transport"
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "typing_extensions",
    "tqdm",
    "huggingface_hub>=1.0,<2.0"
]

[project.optional-dependencies]
test = ["pytest>=7", "respx>=0.21"]

[project.scripts]
hippius-hub = "hippius_hub.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hippius_hub.hippius_core"
python-source = "."

[tool.pytest.ini_options]
# No default exclusion — CI runs the full suite. For fast local iteration,
# pass `-m "not e2e"` to skip tests that hit the registry / huggingface.co.
markers = [
    "e2e: tests that hit the network (registry.hippius.com and/or huggingface.co)",
]

