[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "hippius_hub"
version = "0.5.1"
description = "Hippius Hub CLI + Python client: manage your registry namespace, search the AI model index, and pull/push models with a Rust-accelerated transport"
requires-python = ">=3.9"
dependencies = [
    "httpx",
    "typing_extensions",
    "tqdm",
    "huggingface_hub>=1.0,<2.0"
]

[project.optional-dependencies]
test = ["pytest>=7", "respx>=0.21", "hypothesis>=6"]

[project.scripts]
hippius-hub = "hippius_hub.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hippius_hub.hippius_core"
python-source = "."

[tool.pytest.ini_options]
# Default selection skips `expensive`: those tests mutate prod state that's
# slow/costly to revert (on-chain subscriptions debit credits, rotate-token
# invalidates every parallel runner's robot secret, publicity toggle resizes
# the project quota). The default run (`pytest`) therefore covers all
# unit + e2e tests but skips expensive. CI's standard step relies on this
# default; the release/dispatch step overrides with `-m expensive` (pytest's
# last-`-m`-wins) so expensive tests fire when their HIPPIUS_TEST_ALLOW_*
# gates are also set. See .github/workflows/e2e.yml for the wiring.
addopts = "-m 'not expensive'"
markers = [
    "e2e: tests that hit the network (registry.hippius.com and/or huggingface.co)",
    "expensive: tests with hard-to-undo prod side effects (on-chain ops, robot rotation, quota changes)",
]

